--- a/proyecto_next14_pfg/package.json
+++ b/proyecto_next14_pfg/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/postgres": "^0.8.0",
     "airbnb": "^0.0.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
