--- a/proyecto_next14_pfg/package.json
+++ b/proyecto_next14_pfg/package.json
@@ -32,6 +32,8 @@
     "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
