--- a/proyecto_next14_pfg/package.json
+++ b/proyecto_next14_pfg/package.json
@@ -13,9 +13,12 @@
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/checkbox": "^2.0.29",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@vercel/postgres": "^0.8.0",
     "airbnb": "^0.0.2",
     "bcrypt": "^5.1.1",
